Tablero de analisis
